--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "devStart": "nodemon server",
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
