--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "6.1",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
