--- a/serverr/package.json
+++ b/serverr/package.json
@@ -2,10 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server",
-    "start": "node server",
+    "start": "nodemon index.js",
     "build": "react-scripts build"
   },
   "author": "",
@@ -16,9 +15,7 @@
     "express": "^4.18.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
+    "nodemon": "^3.1.0",
     "react-scripts": "^5.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
