--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
-  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/users", "dest": "/" }]
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [
+    { "src": "/users(.*)", "dest": "/users$1" },
+    { "src": "/images(.*)", "dest": "/images$1" },
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
