--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.1.0",
     "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
