--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
   "routes": [
     { "src": "/users(.*)", "dest": "/cors-proxy.js" },
     { "src": "/images(.*)", "dest": "/cors-proxy.js" },
