--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,19 @@
 {
   "version": 2,
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "src": "/users(.*)", "dest": "/cors-proxy.js" },
-    { "src": "/images(.*)", "dest": "/cors-proxy.js" },
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "/users",
+      "dest": "/api/users"
+    },
+    {
+      "src": "/images",
+      "dest": "/api/images"
+    }
   ]
 }
